--- a/pr10 - Tables/index.html
+++ b/pr10 - Tables/index.html
@@ -10,7 +10,21 @@
 </head>
 
 <body>
-     <h1>Tablee</h1>
+     <h1>Table</h1>
+     <table>
+          <tr>
+          <td>00</td>
+          <td>01</td>
+          <td>02</td>
+          <td>03</td>
+          </tr>
+          <tr>
+          <td>20</td>
+          <td>21</td>
+          <td>22</td>
+          <td>23</td>
+          </tr>
+     </table>
 
 </body>
 
